--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/values/colors.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="subtitle">#B90B4261</color>
     <color name="secondy">#46546E</color>
     <color name="subtext">#2E2E42</color>
+    <color name="bluesky">#00B0FF</color>
 </resources>
