--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/listingusers.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/listingusers.xml
@@ -19,13 +19,13 @@
            android:orientation="horizontal">
 
            <de.hdodenhof.circleimageview.CircleImageView
-               android:layout_width="100dp"
-               android:layout_height="100dp"
-               android:layout_marginStart="20dp"
                android:id="@+id/pictureUser"
-               app:civ_border_width="3dp"
+               android:layout_width="52dp"
+               android:layout_height="74dp"
+               android:layout_marginStart="20dp"
+               android:src="@drawable/personna"
                app:civ_border_color="@color/primary"
-               android:src="@drawable/personna" />
+               app:civ_border_width="3dp" />
 
            <LinearLayout
                android:layout_width="190dp"
@@ -68,14 +68,14 @@
        </LinearLayout>
 
        <ImageButton
-           android:layout_width="50dp"
+           android:id="@+id/deletbtn"
+           android:layout_width="35dp"
+           android:layout_height="43dp"
+           android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
-           android:layout_height="50dp"
+           android:background="@android:color/transparent"
            android:contentDescription="@string/addnew"
            android:foregroundGravity="center"
-           android:layout_marginStart="5dp"
-           android:id="@+id/deletbtn"
-           android:background="@android:color/transparent"
            android:src="@drawable/deleteicon" />
 
    </LinearLayout>
