--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_listofusers.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_listofusers.xml
@@ -20,10 +20,10 @@
 
         <TextView
             android:id="@+id/titletexts"
-            android:layout_width="match_parent"
+            android:layout_width="229dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginStart="-57dp"
+            android:layout_marginStart="46dp"
             android:layout_marginTop="35dp"
             android:layout_marginBottom="25dp"
             android:layout_toEndOf="@id/pack"
