--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:contentDescription="@string/welcom"
-        android:src="@drawable/car" />
+        android:src="@drawable/abb" />
 
     <TextView
         android:id="@+id/txttitl"
@@ -54,7 +54,7 @@
 
         <RelativeLayout
             android:id="@+id/btnallUsers"
-            android:layout_width="109dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:background="@drawable/bordersolid"
             android:padding="10dp">
@@ -62,9 +62,9 @@
             <ImageView
                 android:id="@+id/img1"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="30dp"
                 android:contentDescription="@string/allusers"
-                android:src="@drawable/add" />
+                android:src="@drawable/user" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -74,25 +74,25 @@
                 android:layout_marginTop="3dp"
                 android:text="@string/allusers"
                 android:textColor="@color/subtext"
-                android:textSize="20sp"
+                android:textSize="13sp"
                 android:textStyle="bold" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/btnNewUser"
-            android:layout_width="109dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:background="@drawable/bordersolid"
-            android:padding="10dp">
+            android:padding="9dp">
 
             <ImageView
                 android:id="@+id/img2"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="30dp"
                 android:contentDescription="@string/addnew"
-                android:src="@drawable/adduser" />
+                android:src="@drawable/ads" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -102,25 +102,25 @@
                 android:layout_marginTop="3dp"
                 android:text="@string/addnew"
                 android:textColor="@color/subtext"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/btnLogout"
-            android:layout_width="109dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:background="@drawable/bordersolid"
-            android:padding="10dp">
+            android:padding="4dp">
 
             <ImageView
                 android:id="@+id/img3"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="30dp"
                 android:contentDescription="@string/logout"
-                android:src="@drawable/logout" />
+                android:src="@drawable/exit" />
 
             <TextView
                 android:layout_width="wrap_content"
