--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_update_user.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_update_user.xml
@@ -79,6 +79,30 @@
             android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textSize="20sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:textSize="23sp"
+            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:text="State"
+            android:gravity="center"
+            android:textColor="@color/primary"/>
+
+        <EditText
+            android:id="@+id/editstate"
+            android:layout_width="331dp"
+
+            android:layout_height="57dp"
+
+            android:layout_gravity="center"
+            android:autofillHints="emailAddress"
+            android:background="@drawable/borderinput"
+            android:inputType="textEmailAddress"
+            android:padding="10dp"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
