--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_login.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_login.xml
@@ -12,10 +12,16 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
         android:padding="25dp">
+
+        <ImageView
+            android:id="@+id/img1"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:src="@drawable/logo" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,7 +47,7 @@
             android:textSize="20sp"
             android:hint="@string/hintemail"
             android:maxLines="1"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:inputType="textEmailAddress"
             android:background="@drawable/roud_back5"
             android:id="@+id/EmailInput"/>
@@ -67,8 +73,8 @@
 
             <ImageView
                 android:id="@+id/showhidepasswordbtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="20dp"
@@ -163,9 +169,11 @@
 
         <Button
             android:id="@+id/button2"
+
+            android:text="@string/client"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            android:layout_height="55dp"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 
