--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_usermanager.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_usermanager.xml
@@ -28,7 +28,7 @@
             android:gravity="center"
             android:text="@string/titleContent"
             android:textColor="@color/secondy"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <EditText
@@ -84,18 +84,17 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnuser"
-            android:layout_width="348dp"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
             android:layout_below="@id/pss"
             android:layout_marginTop="40dp"
             android:background="@drawable/btn_round"
-            android:drawableStart="@drawable/addicon"
-            android:paddingStart="20dp"
-            android:paddingEnd="50dp"
-            android:text="@string/titleContent"
+            android:paddingStart="40dp"
+            android:paddingEnd="40dp"
+            android:layout_marginLeft="27dp"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
