--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/listingusers.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/listingusers.xml
@@ -23,7 +23,7 @@
                android:layout_width="52dp"
                android:layout_height="74dp"
                android:layout_marginStart="20dp"
-               android:src="@drawable/personna"
+               android:src="@drawable/logo"
                app:civ_border_color="@color/primary"
                app:civ_border_width="3dp" />
 
@@ -69,8 +69,8 @@
 
        <ImageButton
            android:id="@+id/deletbtn"
-           android:layout_width="35dp"
-           android:layout_height="43dp"
+           android:layout_width="21dp"
+           android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
