--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_client.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_client.xml
@@ -39,6 +39,6 @@
         android:id="@+id/lstUsers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/listingusers" />
+        tools:listitem="@layout/activity_listingsclient" />
 
 </LinearLayout>
