--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
 
     <ImageView
 
-        android:layout_width="142dp"
+        android:layout_width="match_parent"
         android:layout_height="168dp"
+        android:layout_gravity="center"
 
 
-        android:layout_marginRight="300dp"
 
         android:src="@drawable/logo" />
 
