--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_login.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/title2"
+            android:text="@string/title3"
             android:textColor="@color/black"
             android:textSize="40sp"
             android:textStyle="bold" />
@@ -90,19 +90,19 @@
             android:text="@string/forgetpass"
             android:layout_marginTop="20dp"
             android:textColor="@color/primary"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:id="@+id/forgotbtn"
             android:textStyle="bold"
             android:layout_marginEnd="20dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="40dp"
             android:text="@string/title2"
             android:textAllCaps="false"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:id="@+id/btnLogin"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:background="@drawable/btn_round"
             android:textColor="@color/white"/>
@@ -115,22 +115,22 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:background="#1A000000"
-                android:layout_marginEnd="20dp"
+                android:layout_centerVertical="true"
                 android:layout_marginStart="5dp"
+                android:layout_marginEnd="20dp"
                 android:layout_toStartOf="@+id/txtOr"
-                android:layout_centerVertical="true"/>
+                android:background="#1A000000" />
 
 
             <TextView
                 android:id="@+id/txtOr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/OR"
                 android:layout_centerInParent="true"
+                android:text="@string/OR"
+                android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
@@ -156,15 +156,6 @@
                 android:textSize="20sp"
                 android:text="@string/chain1"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/txtSignup"
-                android:textColor="@color/primary"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:text="@string/title1"/>
-
         </LinearLayout>
 
         <Button
@@ -173,6 +164,7 @@
             android:text="@string/client"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:textStyle="bold"
             android:layout_marginTop="10dp"/>
 
     </LinearLayout>
