--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_update_user.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/layout/activity_update_user.xml
@@ -92,11 +92,9 @@
             android:textColor="@color/primary"/>
 
         <EditText
-            android:id="@+id/editstate"
+            android:id="@+id/editeState"
             android:layout_width="340dp"
-
             android:layout_height="40dp"
-
             android:layout_gravity="center"
             android:autofillHints="emailAddress"
             android:background="@drawable/borderinput"
